--- a/notebook/00_Intro.ipynb
+++ b/notebook/00_Intro.ipynb
@@ -208,139 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Retailer</th>\n",
-       "      <th>Retailer ID</th>\n",
-       "      <th>Invoice Date</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>State</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Product</th>\n",
-       "      <th>Price per Unit</th>\n",
-       "      <th>Units Sold</th>\n",
-       "      <th>Total Sales</th>\n",
-       "      <th>Operating Profit</th>\n",
-       "      <th>Operating Margin</th>\n",
-       "      <th>Sales Method</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1019</th>\n",
-       "      <td>Foot Locker</td>\n",
-       "      <td>1185732</td>\n",
-       "      <td>2021-06-05</td>\n",
-       "      <td>Midwest</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>Omaha</td>\n",
-       "      <td>Women's Athletic Footwear</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>Outlet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1025</th>\n",
-       "      <td>Foot Locker</td>\n",
-       "      <td>1185732</td>\n",
-       "      <td>2021-06-11</td>\n",
-       "      <td>Midwest</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>Omaha</td>\n",
-       "      <td>Women's Athletic Footwear</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>Outlet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4907</th>\n",
-       "      <td>Foot Locker</td>\n",
-       "      <td>1185732</td>\n",
-       "      <td>2021-06-05</td>\n",
-       "      <td>Midwest</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>Omaha</td>\n",
-       "      <td>Women's Athletic Footwear</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>Online</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4913</th>\n",
-       "      <td>Foot Locker</td>\n",
-       "      <td>1185732</td>\n",
-       "      <td>2021-06-11</td>\n",
-       "      <td>Midwest</td>\n",
-       "      <td>Nebraska</td>\n",
-       "      <td>Omaha</td>\n",
-       "      <td>Women's Athletic Footwear</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>Online</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Retailer  Retailer ID Invoice Date   Region     State   City  \\\n",
-       "1019  Foot Locker      1185732   2021-06-05  Midwest  Nebraska  Omaha   \n",
-       "1025  Foot Locker      1185732   2021-06-11  Midwest  Nebraska  Omaha   \n",
-       "4907  Foot Locker      1185732   2021-06-05  Midwest  Nebraska  Omaha   \n",
-       "4913  Foot Locker      1185732   2021-06-11  Midwest  Nebraska  Omaha   \n",
-       "\n",
-       "                        Product  Price per Unit  Units Sold  Total Sales  \\\n",
-       "1019  Women's Athletic Footwear            35.0           0          0.0   \n",
-       "1025  Women's Athletic Footwear            30.0           0          0.0   \n",
-       "4907  Women's Athletic Footwear            33.0           0          0.0   \n",
-       "4913  Women's Athletic Footwear            27.0           0          0.0   \n",
-       "\n",
-       "      Operating Profit  Operating Margin Sales Method  \n",
-       "1019               0.0              0.40       Outlet  \n",
-       "1025               0.0              0.40       Outlet  \n",
-       "4907               0.0              0.55       Online  \n",
-       "4913               0.0              0.53       Online  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#campo = df[\"Units Sold\"]\n",
     "#df.loc[campo == 0]"
@@ -477,6 +347,37 @@
     "\n",
     "rango = valor_max - valor_min\n",
     "print(f\"El rango entre {valor_min} y {valor_max} es : {rango}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Varianza\n",
+    "\n",
+    "Mide cuánto se alejan los valores de la media"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La varianza es 216.24870460420334\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Varianza en Precios por unidad\n",
+    "data = df[\"Price per Unit\"]\n",
+    "data = np.array(data)\n",
+    "\n",
+    "varianza = np.var(data, ddof=1)\n",
+    "print(f\"La varianza es {varianza}\")"
    ]
   }
  ],
