--- a/notebook/00_Intro.ipynb
+++ b/notebook/00_Intro.ipynb
@@ -379,6 +379,22 @@
     "varianza = np.var(data, ddof=1)\n",
     "print(f\"La varianza es {varianza}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Desviación Estándar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
