--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -431,13 +431,14 @@
    ],
    "source": [
     "# Media o promedio para Price per Unit\n",
-    "media = df['Price per Unit'].mean()\n",
+    "data = df['Price per Unit']\n",
+    "media = np.mean(data)\n",
     "print(f\"El promedio de precios de venta por unidad es : {media.round(0)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -450,13 +451,14 @@
    ],
    "source": [
     "# Media o promedio de Units sold\n",
-    "media = df['Units Sold'].mean()\n",
+    "data = df['Units Sold']\n",
+    "media = np.mean(data)\n",
     "print(f\"El promedio de unidades vendidas es : {media.round(0)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -469,8 +471,35 @@
    ],
    "source": [
     "# Media o promedio de total sales\n",
-    "media = df['Total Sales'].mean()\n",
+    "data = df['Total Sales']\n",
+    "media = np.mean(data)\n",
     "print(f\"El promedio de ventas totales es : {media.round(0)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mediana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculamos el valor central para Price per unit\n",
+    "data = df['Price per Unit']\n",
+    "print()"
    ]
   }
  ],
