--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -492,14 +492,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.0\n"
+      "El valor central de \"Price per Unit\" es : 45.0\n"
      ]
     }
    ],
    "source": [
-    "# Calculamos el valor central para Price per unit\n",
+    "# Calculamos el valor central para Price per Unit\n",
     "data = df['Price per Unit']\n",
-    "print()"
+    "mediana = np.median(data)\n",
+    "print(f'El valor central de precios de venta por unidad es : {mediana}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculamos el valor central para "
    ]
   }
  ],
