--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -485,14 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El valor central de \"Price per Unit\" es : 45.0\n"
+      "El valor central de precios de venta por unidad es : 45.0\n"
      ]
     }
    ],
@@ -505,11 +505,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor central de unidades vendidas es : 176.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculamos el valor central para "
+    "# Calculamos el valor central para Units Sold\n",
+    "data = df['Units Sold']\n",
+    "mediana = np.median(data)\n",
+    "print(f\"El valor central de unidades vendidas es : {mediana}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor central de ventas totales es : 9576.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculamos el valor central para total sales\n",
+    "data = df['Total Sales']\n",
+    "mediana = np.median(data)\n",
+    "print(f\"El valor central de ventas totales es : {mediana}\")"
    ]
   }
  ],
