--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -542,6 +542,13 @@
     "mediana = np.median(data)\n",
     "print(f\"El valor central de ventas totales es : {mediana}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Moda"
+   ]
   }
  ],
  "metadata": {
