--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy as stats"
+    "from scipy import stats"
    ]
   },
   {
@@ -554,8 +554,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moda o dato que más se repite es : ['1969-12-31T19:00:44.213000000'] [77] veces\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\harri\\AppData\\Local\\Temp\\ipykernel_6120\\3107819331.py:2: DeprecationWarning: Support for non-numeric arrays has been deprecated as of SciPy 1.9.0 and will be removed in 1.11.0. `pandas.DataFrame.mode` can be used instead, see https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.mode.html.\n",
+      "  moda = stats.mode(data, keepdims=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = df['Invoice Date']\n",
+    "moda = stats.mode(data, keepdims=True)\n",
+    "print(f\"La moda o dato que más se repite es : {moda[0]} {moda[1]} veces\") \n",
+    "# Nos da una advertencia porque estamos aplicando las funciones de Scipy a un valor no numérico"
+   ]
   }
  ],
  "metadata": {
