--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "[9648 rows x 14 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\harri\\AppData\\Local\\Temp\\ipykernel_6120\\3107819331.py:2: DeprecationWarning: Support for non-numeric arrays has been deprecated as of SciPy 1.9.0 and will be removed in 1.11.0. `pandas.DataFrame.mode` can be used instead, see https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.mode.html.\n",
+      "C:\\Users\\harri\\AppData\\Local\\Temp\\ipykernel_8704\\2345729561.py:2: DeprecationWarning: Support for non-numeric arrays has been deprecated as of SciPy 1.9.0 and will be removed in 1.11.0. `pandas.DataFrame.mode` can be used instead, see https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.mode.html.\n",
       "  moda = stats.mode(data, keepdims=True)\n"
      ]
     }
@@ -576,6 +576,56 @@
     "moda = stats.mode(data, keepdims=True)\n",
     "print(f\"La moda o dato que más se repite es : {moda[0]} {moda[1]} veces\") \n",
     "# Nos da una advertencia porque estamos aplicando las funciones de Scipy a un valor no numérico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moda es: 1969-12-31 19:00:44.213000\n",
+      "Y se repite 77 veces\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Supongamos que df es tu DataFrame y 'Invoice Date' es una columna de tipo fecha.\n",
+    "data = df['Invoice Date']\n",
+    "\n",
+    "# Calcular la moda\n",
+    "moda = data.mode()\n",
+    "\n",
+    "# Calcular la frecuencia con la que se repite la moda\n",
+    "frecuencia = data.value_counts().loc[moda[0]]\n",
+    "\n",
+    "print(f\"La moda es: {moda[0]}\")\n",
+    "print(f\"Y se repite {frecuencia} veces\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moda o dato que más se repite es: [50.]\n",
+      "Y se repite: [557] veces\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Moda para un campo de tipo int: Ver cual es el precio que más se repite\n",
+    "data = df['Price per Unit']\n",
+    "moda = stats.mode(data, keepdims=True)\n",
+    "print(f\"La moda o dato que más se repite es: {moda[0]}\")\n",
+    "print(f\"Y se repite: {moda[1]} veces\")"
    ]
   }
  ],
