--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "- `Price per Unit`: \n",
     "\n",
-    "- `Units Sales`:\n",
+    "- `Units Sold`:\n",
     "\n",
     "- `Total Sales`:\n",
     "\n",
@@ -636,11 +636,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Describen como se distribuyen los datos en relación con la media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rango\n",
+    "\n",
+    "R = Vmax - Vmin"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El rango entre 1275 y 0 es : 1275\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rango de unidades vendidas\n",
+    "data = df['Units Sold']\n",
+    "rango = np.max(data) - np.min(data)\n",
+    "print(f\"El rango entre {np.max(data)} y {np.min(data)} es : {rango}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El rango entre 825000.0000000001 y 0.0 es : 825000.0000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# El rango de ventas totales (total sales)\n",
+    "data = df['Total Sales']\n",
+    "rango = np.max(data) - np.min(data)\n",
+    "print(f\"El rango entre {np.max(data)} y {np.min(data)} es : {rango}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Invoice Date es un dato de tiempo o dato temporal para la cual si queremos calcular el rango\n",
+    "debemos de hacerlo entre la fecha más reciente y la más antigua\n",
+    "\n",
+    "r = f_reciente - f_antigua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                   int64\n",
+       "Retailer                    object\n",
+       "Retailer ID                  int64\n",
+       "Invoice Date        datetime64[ns]\n",
+       "Region                      object\n",
+       "State                       object\n",
+       "City                        object\n",
+       "Product                     object\n",
+       "Price per Unit             float64\n",
+       "Units Sold                   int64\n",
+       "Total Sales                float64\n",
+       "Operating Profit           float64\n",
+       "Operating Margin           float64\n",
+       "Sales Method                object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Primero convertimos la data a tipo datetime\n",
+    "df['Invoice Date'] = pd.to_datetime(df['Invoice Date'])\n",
+    "df.dtypes"
+   ]
   }
  ],
  "metadata": {
