--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -703,38 +703,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0                   int64\n",
-       "Retailer                    object\n",
-       "Retailer ID                  int64\n",
-       "Invoice Date        datetime64[ns]\n",
-       "Region                      object\n",
-       "State                       object\n",
-       "City                        object\n",
-       "Product                     object\n",
-       "Price per Unit             float64\n",
-       "Units Sold                   int64\n",
-       "Total Sales                float64\n",
-       "Operating Profit           float64\n",
-       "Operating Margin           float64\n",
-       "Sales Method                object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El rango de tiempo entre 1969-12-31 19:00:44.561000 y 1969-12-31 19:00:43.831000 es : 0 days 00:00:00.730000\n"
+     ]
     }
    ],
    "source": [
     "# Primero convertimos la data a tipo datetime\n",
     "df['Invoice Date'] = pd.to_datetime(df['Invoice Date'])\n",
-    "df.dtypes"
+    "# df.dtypes: para comparar el tipo de dato\n",
+    "rango_tiempo = df['Invoice Date'].max() - df['Invoice Date'].min()\n",
+    "print(f\"El rango de tiempo entre {df['Invoice Date'].max()} y {df['Invoice Date'].min()} es : {rango_tiempo}\")"
    ]
   }
  ],
