--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -794,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Desviación Estandar"
+    "### Desviación Estandar"
    ]
   },
   {
