--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -802,7 +802,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Desviación Estandar Poblacional"
+   ]
   },
   {
    "cell_type": "code",
