--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -752,14 +752,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La varianza de ventas totales con respecto al promedio(media) 93273.4375 es 20140155803.61\n"
+      "La varianza muestral de ventas totales con respecto al promedio(media) 93273.4375 es 20140155803.61\n"
      ]
     }
    ],
@@ -767,7 +767,7 @@
     "# varianza muestral: se aplica comunmente en el análisis de datos ya que \n",
     "# los analistas tienen o tenemos acceso a solo una parte de la población\n",
     "# es decir a datos muestrales\n",
-    "print(f\"La varianza de ventas totales con respecto al promedio(media) {np.mean(data)} es {varianza_muestral}\")"
+    "print(f\"La varianza muestral de ventas totales con respecto al promedio(media) {np.mean(data)} es {varianza_muestral}\")"
    ]
   },
   {
