--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -772,21 +772,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La desviación estandar es : 141916.0167268304\n"
+      "La desviación estandar muestral es : 141916.0167268304\n"
      ]
     }
    ],
    "source": [
     "# Interpretando la varianza:\n",
     "desviacion_standar = np.sqrt(varianza_muestral)\n",
-    "print(f\"La desviación estandar es : {desviacion_standar}\")\n",
+    "print(f\"La desviación estandar muestral es : {desviacion_standar}\")\n",
     "# Quiere decir que las ventas varían en 141916.0167268304 hacia arriba o abajo con respecto a la media"
    ]
   },
@@ -799,25 +799,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La desviación estandar poblacional es : 141908.66185046948\n"
+     ]
     }
    ],
    "source": [
     "# Desviación Estandar Poblacional\n",
     "data = df['Total Sales']\n",
     "dsp = np.std(data)\n",
-    "print"
+    "print(f\"La desviación estandar poblacional es : {dsp}\")"
    ]
   },
   {
@@ -825,7 +822,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Desviación Estandar Muestral\n",
+    "data = df['Total Sales']\n",
+    "dsm = np.std(data, ddof=1)\n",
+    "print(f\"La desv\")"
+   ]
   }
  ],
  "metadata": {
