--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -819,14 +819,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La desviación estandar muestral es : 141916.0167268304\n"
+     ]
+    }
+   ],
    "source": [
     "# Desviación Estandar Muestral\n",
     "data = df['Total Sales']\n",
     "dsm = np.std(data, ddof=1)\n",
-    "print(f\"La desv\")"
+    "print(f\"La desviación estandar muestral es : {dsm}\")"
    ]
   }
  ],
