--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -831,10 +831,63 @@
     }
    ],
    "source": [
-    "# Desviación Estandar Muestral\n",
+    "# Desviación Estandar Muestral - Es la que más se aplica en el análisis de datos\n",
     "data = df['Total Sales']\n",
     "dsm = np.std(data, ddof=1)\n",
     "print(f\"La desviación estandar muestral es : {dsm}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coeficiente de Variación\n",
+    "- Compara la desviación estandar con la media"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El Coeficiente de variación es : 152.15%\n"
+     ]
+    }
+   ],
+   "source": [
+    "cv = (dsm / np.mean(data)) * 100\n",
+    "print(f\"El Coeficiente de variación es : {cv.round(2)}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cuartiles y Percentiles\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1: 4254.5, Q2 (mediana): 9576.0, Q3: 150000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "q1 = np.percentile(data, 25) # Cuartil 25%\n",
+    "q2 = np.percentile(data, 50) # Cuartil 50%\n",
+    "q3 = np.percentile(data, 75) # Cuartil 75%\n",
+    "print(f\"Q1: {q1}, Q2 (mediana): {q2}, Q3: {q3}\")"
    ]
   }
  ],
