--- a/home/module/MOD 1/notebook.ipynb
+++ b/home/module/MOD 1/notebook.ipynb
@@ -889,6 +889,37 @@
     "q3 = np.percentile(data, 75) # Cuartil 75%\n",
     "print(f\"Q1: {q1}, Q2 (mediana): {q2}, Q3: {q3}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El percentil 90 es: 300000.0000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Percentiles\n",
+    "percentil90 = np.percentile(data, 90) # Representa al percentil 90%\n",
+    "print(f\"El percentil 90 es: {percentil90}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
