--- a/home/module/MOD 2/notebook.ipynb
+++ b/home/module/MOD 2/notebook.ipynb
@@ -167,11 +167,23 @@
    "cell_type": "markdown",
    "id": "5de7cf6f",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Paso 2: Probabilidad de Eventos"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Evento A: Cliente compra con promoción"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f9464d2",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
