--- a/home/module/MOD 2/notebook.ipynb
+++ b/home/module/MOD 2/notebook.ipynb
@@ -180,8 +180,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0f9464d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(A) - Promoción Activa: 0.4058\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_A = np.mean(data['promo'] == 1)\n",
+    "print(f\"P(A) - Promoción Activa: {p_A:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae7bb0cd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "024d6fa3",
    "metadata": {},
    "outputs": [],
    "source": []
