--- a/home/module/MOD 2/notebook.ipynb
+++ b/home/module/MOD 2/notebook.ipynb
@@ -201,7 +201,9 @@
    "cell_type": "markdown",
    "id": "ae7bb0cd",
    "metadata": {},
-   "source": []
+   "source": [
+    "Evento B: Compra más de 3 productos"
+   ]
   },
   {
    "cell_type": "code",
