--- a/home/module/MOD 2/notebook.ipynb
+++ b/home/module/MOD 2/notebook.ipynb
@@ -211,7 +211,10 @@
    "id": "024d6fa3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p_B = np.mean(data['cantidad_productos'] > 3)\n",
+    "print(f\"P(B) - Más de 3 productos: {p_B:.4f}\")"
+   ]
   }
  ],
  "metadata": {
