--- a/home/module/MOD 2/notebook.ipynb
+++ b/home/module/MOD 2/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "eb03bdac",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4e9628d6",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidad de obtener un 3: 0.1703\n"
+      "Probabilidad de obtener un 3: 0.1677\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1fa61644",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "aed1baca",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "4           4      1                   0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0f9464d2",
    "metadata": {},
    "outputs": [
@@ -207,10 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "024d6fa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(B) - Más de 3 productos: 0.3521\n"
+     ]
+    }
+   ],
    "source": [
     "p_B = np.mean(data['cantidad_productos'] > 3)\n",
     "print(f\"P(B) - Más de 3 productos: {p_B:.4f}\")"
